# tictactoe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: rules
tttlib/: CMakeLists.txt  basic_fields.cpp  basic_fields.h  composed_observer.cpp  composed_observer.h  events.cpp  events.h  field.h  game_engine.cpp  game_engine.h  game_state.h  player.h  types.h
tttlib/tests/: CMakeLists.txt  test_engine.cpp  test_events.cpp  test_fields.cpp  tests_common.h
tttplayer/: CMakeLists.txt  encoder.cpp  encoder.h  figure_analyzer.h  main.cpp  my_player.cpp  my_player.h  ncurses_observer.cpp  ncurses_observer.h  other.h
tttplayer/tests/: CMakeLists.txt  my_test.cpp
tttremote/: CMakeLists.txt  example_client.cpp  example_server.cpp  game_server.cpp  game_server.hpp  messages.cpp  messages.hpp  messaging_driver.cpp  messaging_driver.hpp  zmq_drivers.cpp  zmq_drivers.hpp
tttremote/tests/: CMakeLists.txt  debug_listener.hpp  test_encoder.cpp  test_message_coding.cpp  test_zmq_driver.cpp  test_zmq_request_sender.cpp
